# VaultScan

./: .gitignore  README.md  demo_with_moto.py  scanner.py  vercel.json
Cloud-Misconfig-Scanner/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cms.py  pyproject.toml  requirements-dev.txt  requirements.txt
Cloud-Misconfig-Scanner/.github/workflows/: ci.yml
Cloud-Misconfig-Scanner/cms/: __init__.py  __main__.py  cli.py
Cloud-Misconfig-Scanner/cms/checks/: aws_s3_rules.yaml
Cloud-Misconfig-Scanner/cms/core/: html_reporter.py  models.py  reporter.py  rules.py
Cloud-Misconfig-Scanner/cms/providers/: aws_s3.py  azure_blob.py  base.py  gcp_storage.py
Cloud-Misconfig-Scanner/tests/: __init__.py  conftest.py  test_aws_s3_scanner.py  test_cli.py  test_html_reporter.py  test_reporter.py  test_rules.py
backend/: .env.example  README.md  app.py  attack_paths.py  auth_store.py  aws_client.py  config.py  connection_store.py  email_alerts.py  grok_client.py  remediation_engine.py  remediation_report.py  report_export.py  requirements.txt  scan_persistence.py  scanner_engine.py  schedule_store.py  scheduler.py
docs/: CLOUD_SECURITY_CHECKS.md  CONNECTING_CLOUDS.md  PROJECT_IDEAS.txt  REMEDIATOR_IAM.md  VaultScan_Demo_Speech.txt  VaultScan_Final_Project_Team_Breakdown.xlsx  Vaultscan.xlsx  generate_demo_speech_pdf.py  lab-manual-fixes.sh  restore-assume-role-trust.json
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/cspm/: ai-assistant.tsx  audit-stream.tsx  brand-cloud.tsx  dashboard.tsx  data.ts  interactive.tsx  landing.tsx  login.tsx  posture-chart.tsx  scan-report.tsx  sidebar.tsx
frontend/components/cspm/tabs/: attack-paths.tsx  compliance-registry.tsx  findings.tsx  fix-change-report.tsx  overview.tsx  remediation-hub.tsx  scan-history.tsx  settings.tsx  vulnerability-feed.tsx
frontend/lib/: api.ts  auth.ts  scan-store.ts
frontend/scripts/: dev.mjs
frontend/styles/: globals.css
game/: README.md  index.html
scripts/: bootstrap_demo.py  start-stack.sh  start_localstack.sh
webapp/: app.py
webapp/static/css/: style.css
webapp/static/js/: app.js
webapp/templates/: index.html
